--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "expo": "~54.0.30",
     "expo-audio": "~1.1.1",
     "expo-constants": "~18.0.12",
+    "expo-document-picker": "~14.0.8",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
@@ -29,6 +31,7 @@
     "expo-router": "~6.0.21",
     "expo-speech": "^14.0.8",
     "expo-splash-screen": "~31.0.13",
+    "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
