chore: wip on testing how tools and llm.generate work with prompts and context

--- a/app.json
+++ b/app.json
@@ -49,7 +49,8 @@
           "photosPermission": "Allow Availor to access your photos to upload images for learning context."
         }
       ],
-      "expo-document-picker"
+      "expo-document-picker",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true,
