--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,13 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "includes": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "**/*.json"]
+    "includes": [
+      "**/*.ts",
+      "**/*.tsx",
+      "**/*.js",
+      "**/*.jsx",
+      "**/*.json"
+    ]
   },
   "formatter": {
     "enabled": true,
@@ -71,7 +77,10 @@
   },
   "overrides": [
     {
-      "includes": ["*.ts", "*.tsx"],
+      "includes": [
+        "*.ts",
+        "*.tsx"
+      ],
       "linter": {
         "rules": {
           "suspicious": {
@@ -81,7 +90,12 @@
       }
     },
     {
-      "includes": ["*.test.ts", "*.test.tsx", "*.spec.ts", "*.spec.tsx"],
+      "includes": [
+        "*.test.ts",
+        "*.test.tsx",
+        "*.spec.ts",
+        "*.spec.tsx"
+      ],
       "linter": {
         "rules": {
           "suspicious": {
